--- a/OEBPS/Text/c133.xhtml
+++ b/OEBPS/Text/c133.xhtml
@@ -11,204 +11,205 @@
 </head>
 
 <body>
-    <h1>133　戦争秒読み</h1>
-    <p>　例の暗殺騒動の後、吸血鬼とエルフェの両種族は速やかに集落からの撤収を開始した。</p>
-    <p>　ダンジョンが誰かに攻略されて消えた以上はもう集落に残る意味はなかったし、何よりいつ襲撃されるか分からないとなれば、尚更残る意味がない。</p>
-    <p>　メルセデスも学園へ帰還する事となったが、ここで問題となったのはレスリーであった。</p>
-    <p>　普通に考えればエルフェである彼女は、エルフェの国にある実家に戻るべきである。</p>
-    <p>　しかし、彼女はつい先日にグラシアンと決闘をしており、更にそのグラシアンは暗殺者によって殺されてしまっている。</p>
-    <p>　レスリーに一時かけられた貴族殺しの容疑は、メルセデス達が真犯人のフォーゲラ達を捕まえた事で完全に晴れている。</p>
-    <p>　グラシアンの死に関して、レスリーが責められる部分など何もない。</p>
-    <p>　しかしグラシアンの家族はそう思うだろうか？</p>
-    <p>　感情というのはそんな簡単なものではなく、グラシアンの家族が身内を失った怒りのぶつけ所を欲し、その結果レスリーに矛先が向かう可能性は決して低くない。</p>
-    <p>　しかしそれでも、レスリーは一度国に帰る事を選択した。</p>
+    <h1>133. 战争读秒</h1>
+    <p>在那次暗杀骚动之后，吸血鬼和埃尔菲两个种族迅速开始从村落撤离。</p>
+    <p>既然迷宫被人攻占消失了，就没有留在村落的意义了，如果不知道什么时候会被袭击的话，就没有剩下的意义了。</p>
+    <p>梅赛德斯也回到了学园，这里成为问题的是莱斯利。</p>
+    <p>一般来说，作为埃尔菲的她应该回到埃尔菲国家的老家。</p>
+    <p>但是，她就在前几天和格拉西恩决斗，而且那个格拉西恩被暗杀者杀死了。</p>
+    <p>当梅塞德斯等人抓获了真正的罪犯福吉拉后，被莱斯利临时指控的贵族被谋杀的指控就彻底清白了。</p>
+    <p>关于格拉西恩的死，莱斯利没有任何被责备的部分。</p>
+    <p>但是格拉西恩的家人会这么想吗？</p>
+    <p>感情并不是那么简单的东西，格拉西恩的家人想要失去亲人的愤怒的发泄处，其结果矛头指向莱斯利的可能性并不低。</p>
+    <p>但是尽管如此，莱斯利还是选择了回国一次。</p>
     <p></p>
-    <p>“<span class="character">そうか、戻るか</span>”</p>
+    <p>“<span class="character">是吗，回去吗？</span>”</p>
     <p></p>
-    <p>　いそいそと吸血鬼とエルフェが撤収準備を進める集落の中央で、メルセデスとレスリーは向かい合ってこれからの事を話し合っていた。</p>
-    <p>　メルセデスの言葉に、レスリーは決意を固めた表情で頷く。</p>
+    <p>在吸血鬼和埃尔菲准备撤退的村落中央，梅赛德斯和莱斯利面对面讨论着今后的事情。</p>
+    <p>对于梅赛德斯的话，莱斯利带着坚定的决心点头。</p>
     <p></p>
-    <p>“<span class="character">ええ。やっぱケジメっていうか……グラシアンの家族にも、事情を説明しなきゃだし</span>”</p>
-    <p>“<span class="character">分かった。なら、こいつ等を連れていけ</span>”</p>
+    <p>“<span class="character">是啊。果然还是很严肃啊……也必须向格拉西恩的家人说明情况。</span>”</p>
+    <p>“<span class="character">知道了。那就带上这些家伙吧。</span>”</p>
     <p></p>
-    <p>　メルセデスがそう言うと、予め後ろに待機させておいたドミニオンと、ピジョーンが前に出た。</p>
-    <p>　このピジョーンはダンジョン攻略中にレスリーの乗り物として活躍し、何故かずっと付いて来ていた個体だ。</p>
-    <p>　ベンケイに通訳させてみたが、どうもこのピジョーンは成り行きで一緒に行動した事でメルセデスとレスリーに対し、仲間意識を勝手に抱いているらしい。</p>
-    <p>　メルセデスとしては勿論、仲間にしたつもりは全くない。</p>
-    <p>　ダンジョン内にあった強制横スクロールエリアをショートカットする為に、たまたま近くを飛んでいたピジョーンを捕まえて、壁にぶつけて、その後何故か勝手についてきただけだ。</p>
-    <p>　どうやらこの時、自分より強い者に従う魔物の本能によってメルセデスを主と認めたらしい。</p>
-    <p>　道理で、何度ダンジョンを出入りしても入口で待機していたわけだ。</p>
+    <p>梅塞德斯这么一说，已经提前在后面等着的多米尼翁和皮琼从前面走了出来。</p>
+    <p>这个皮琼在攻略迷宫时作为莱斯利的交通工具活跃着，不知为什么一直跟着的个体。</p>
+    <p>让本凯翻译了一下，总觉得这个皮琼是顺其自然一起行动的，对梅赛德斯和莱斯利，好像擅自抱有伙伴意识。</p>
+    <p>作为梅赛德斯自不必说，完全没有作为伙伴的打算。</p>
+    <p>为了快捷方式在迷宫内的强制横向滚动区域，偶然抓住了在附近飞的皮琼，撞到了墙上，之后不知为何就随便跟着了。</p>
+    <p>看来这个时候，由于遵从比自己强的人的魔物的本能，承认了梅赛德斯为主。</p>
+    <p>难怪进出迷宫好几次都在入口待命。</p>
     <p></p>
-    <p>“いいの？　そのドミニオンってアンタが苦労して捕まえた奴じゃない。</p>
-    <p>それにそっちのピジョーン……いつの間に捕まえてたの？”</p>
-    <p>“<span class="character">……まあ、色々あってな</span>”</p>
-    <p>“<span class="character">色々、ねえ……</span>”</p>
+    <p>“<span class="character">没问题吗？那个多米尼昂不是你辛苦抓住的家伙吧。</span></p>
+    <p><span class="character">而且那边的皮琼……什么时候抓到的？</span>”</p>
+    <p>“<span class="character">……嘛，有很多呢</span>”</p>
+    <p>“<span class="character">很多······呢······</span>”</p>
     <p></p>
-    <p>　じーっとレスリーがメルセデスを凝視する。</p>
-    <p>　レスリーは馬鹿っぽいが、馬鹿ではない。</p>
-    <p>　むしろ、いかに例の本を見たとはいえ、その内容を理解して様々な道具を作り出した事を考えると、理解力は恐ろしく高い部類だ。</p>
-    <p>　そして彼女には既に、十分なヒントが与えられていた。</p>
+    <p>莱斯利凝视着梅赛德斯。</p>
+    <p>莱斯利看起来很傻，但不傻。</p>
+    <p>倒不如说，虽说看了那本书，但考虑到理解其内容而制作了各种各样的道具，理解力是非常高的一类。</p>
+    <p>而且她已经得到了充分的提示。</p>
     <p></p>
-    <p>“<span class="character">メルセデス、やっぱダンジョンを攻略したのって……いや、もしかしたらそれ以前から既に……</span>”</p>
+    <p>“<span class="character">梅赛德斯，果然攻占了地下城……不，说不定从那之前就已经……</span>”</p>
     <p></p>
-    <p>　ここまでで、メルセデスが吸血鬼の中でも規格外の実力の持ち主である事は十分に分かった。</p>
-    <p>　彼女ならばダンジョンを攻略出来ても何も不思議ではない、とレスリーは考える。</p>
-    <p>　……というより、他に候補がいない。</p>
-    <p>　メルセデスとレスリーは途中までダンジョンで一緒に行動していて、ゴールの近くまで到達していた。</p>
-    <p>　そして他に、そこまで辿り着いていた者はいなかったのだ。</p>
-    <p>　ならばあの後、メルセデスが一人でダンジョンに向かって攻略したと考えるのが最も自然だ。</p>
-    <p>　そして、もう一つ気になる点がある。</p>
-    <p>　それは、何故か増えていた本だ。</p>
-    <p>　レスリーのテントが燃えてしまった時、メルセデスはあらかじめ回収しておいたと言って本をレスリーに渡してくれた。</p>
-    <p>　ところがグラシアンの死後に、グラシアンの遺体の側からも全く同じ本が出てきてしまった。</p>
-    <p>　ただ同じ本というだけではない。前に零した果汁の染みや、ページの隅に書いたメモ書きまで同じ……両方とも間違いなく、レスリーの本だ。</p>
-    <p>　そしてこの本をメルセデスから渡されたのは、ダンジョンが攻略されて消える前だった。</p>
+    <p>到这里为止，充分明白了梅赛德斯在吸血鬼中也是规格外的实力的持有者。</p>
+    <p>莱斯利认为，如果是她的话，即使能攻占迷宫也没有什么不可思议的。</p>
+    <p>……与其说是这样，不如说没有其他候补选项了。</p>
+    <p>梅赛德斯和莱斯利一直在迷宫里一起行动，直到到达终点附近。</p>
+    <p>而且，没有其他人到达那里。</p>
+    <p>那么在那之后，认为梅赛德斯一个人向迷宫攻略是最自然的。</p>
+    <p>还有一点很在意。</p>
+    <p>那是不知为何增加了的书。</p>
+    <p>当莱斯利的帐篷烧掉的时候，梅赛德斯说事先回收好了，把书交给了莱斯利。</p>
+    <p>但是在格拉西恩死后，格拉西恩的遗体旁边也出现了完全相同的书。</p>
+    <p>不仅仅是同一本书。之前洒出来的果汁的污点和在页面角落写的笔记都一样……两者都没错，都是莱斯利的书。</p>
+    <p>然后这本书从梅赛德斯那里得到，是在迷宫被攻占消失之前。</p>
     <p></p>
-    <p>“<span class="character">アンタ、前にダンジョンを攻略した者はダンジョンそのものを入手出来るって言ってたじゃない？</span>”</p>
-    <p>“<span class="character">……そうだったか</span>”</p>
-    <p>“<span class="character">そうよ。でさ、ダンジョンって無限に魔物が出てくるじゃない。まるで中で増やしてるみたいにさ</span>”</p>
+    <p>“<span class="character">你之前不是说攻占地下城的人可以得到地下城本身吗？</span>”</p>
+    <p>“<span class="character">……是吗？</span>”</p>
+    <p>“<span class="character">是啊。那么，地下城不是无限地出现魔物吗？简直就像是在里面增加一样。</span>”</p>
     <p>“<span class="character">…………</span>”</p>
-    <p>“<span class="character">増やせるのって魔物だけなのかな？　もしかして、物も……例えば、本とかも増やせるんじゃない？</span>”</p>
+    <p>“<span class="character">能增加的只有魔物吗？难道，东西也……比如，书也能增加吗？</span>”</p>
     <p></p>
-    <p>　ダンジョンは魔物だけではなく無機物も増やせる。</p>
-    <p>　そう考える方が自然だとレスリーは考えていた。</p>
-    <p>　何故なら魔物の中には、武器や防具を身に着けている魔物もいる。</p>
-    <p>　その武器や防具はどこから出ているのか……そこまで考えが至るならば、無機物も増やせるという結論に辿り着くのは難しい事ではない。</p>
-    <p>　そして、もしそうだった場合は一つの仮説が成り立つ。</p>
-    <p>　メルセデスは最初からダンジョンを持っていて、その力で本を増やしたのだと。</p>
+    <p>迷宫不仅能增加魔物，还能增加无机物。</p>
+    <p>莱斯利认为这样想比较自然。</p>
+    <p>因为在魔物中，也有穿着武器和防具的魔物。</p>
+    <p>那个武器和防具是从哪里出来的……考虑到这一点的话，要得出无机物也能增加的结论并不难。</p>
+    <p>而且，如果是这样的话，一个假设就成立了。</p>
+    <p>梅赛德斯从一开始就有迷宫，用那个力量增加了书。</p>
     <p></p>
-    <p>“<span class="character">……まあ、いいか</span>”</p>
+    <p>“<span class="character">……算了</span>”</p>
     <p></p>
-    <p>　しかしここまで考え、レスリーは追求を止めた。</p>
-    <p>　メルセデスはあまり詮索して欲しくなさそうに見えるし、それにダンジョンそのものを手に入れるというのは一国の軍隊に匹敵するだけの軍事力を得るという事だ。</p>
-    <p>　ダンジョンの主というのは、その時点で自分の国を持ったも同然……その時点で『王』である。</p>
-    <p>　レスリーはメルセデスに言われるまで知らなかったが、国の上層部や王族などは当然この秘密を知っているだろう。</p>
-    <p>　ならば、当然厄介事になる。自らの派閥に入れようとするか、それとも消そうとするか。</p>
-    <p>　それらを黙らせるには、逆に既存の王族を派閥に入れる、あるいは消すかして、ダンジョンの主が国を乗っ取り、本当の王になるしかない。</p>
-    <p>　だが、メルセデスはそのどれも望んでいないように見えた。</p>
+    <p>但是考虑到这里，莱斯利停止了追求。</p>
+    <p>梅赛德斯看起来不太希望被调查，而且得到迷宫本身就是得到与一国军队匹敌的军事力量。</p>
+    <p>所谓地下城的主人，在那个时候就等于拥有了自己的国家……那个时候就是“王”。</p>
+    <p>莱斯利在被梅赛德斯说之前并不知道，国家上层和王族等当然知道这个秘密。</p>
+    <p>那么，当然会成为麻烦的事情。是想加入自己的派系，还是想消失呢。</p>
+    <p>要让它们闭嘴，相反，只能把现有的王族纳入派系，或者消灭，然后由迷宫之主夺取国家，成为真正的国王。</p>
+    <p>但是，梅赛德斯看起来并不想要任何一个。</p>
     <p></p>
-    <p>“<span class="character">それじゃあね、メルセデス。短い間だったけど、一緒に冒険出来て楽しかったわよ</span>”</p>
-    <p>“<span class="character">ああ、私もだ。賑やかで楽しめた</span>”</p>
+    <p>“<span class="character">再见，梅赛德斯。虽然时间很短，但能一起冒险真的很开心。</span>”</p>
+    <p>“<span class="character">啊，我也是。很热闹很开心。</span>”</p>
     <p></p>
-    <p>　レスリーとメルセデスは握手を交わし、それからレスリーは背を向けて歩き出す。</p>
-    <p>　だが名残惜しいのか足を何度も止めてはチラチラと後ろを振り返った。早く行けよ。</p>
+    <p>莱斯利和梅赛德斯握手，然后莱斯利转身走了出去。</p>
+    <p>但是也许是依依不舍吧，几次停下脚步，呆呆地回头看了看。快走吧。</p>
     <p></p>
-    <p>“……あのさ、メルセデス。これ、外れてたら恥ずかしいんだけどさ。</p>
-    <p>アンタは……その、あー……多分、これから色々と面倒な権力闘争とかに巻き込まれると思うっていうか……で、もし、助けとかが必要になったらさ……”</p>
+    <p>“<span class="character">……那个，梅赛德斯。这个，说起来有点很不好意思的。</span></p>
+    <p><span class="character">你……那个……啊……大概，今后会被卷入各种麻烦的权力斗争吧……那么，如果需要帮助的话……</span>”</p>
     <p></p>
-    <p>　頬をかき、言葉を選ぼうとしながらレスリーはしどろもどろに話す。</p>
-    <p>　だがやがて面倒になったのか、身体ごと振り返って笑顔で言いたい事を言った。</p>
+    <p>莱斯利一边挠着脸颊，选择着话语，一边语无伦次地说。</p>
+    <p>但是不久就麻烦了吧，回顾一下身体，笑着说了想说的话。</p>
     <p></p>
-    <p>“<span class="character">何かあったら、私に声をかけて。今度は、私がアンタを助けるから！</span>”</p>
+    <p>“<span class="character">有什么事的话，跟我打招呼。这次，我来救你！</span>”</p>
     <p></p>
-    <p>　それだけ言い、レスリーは迷いを振り切るように走っていった。</p>
-    <p>　小さくなっていくその背中を見送り、メルセデスは微かに笑う。</p>
+    <p>只说了这句话，莱斯利就飞快地跑了过去。</p>
+    <p>目送着变小的背影，梅赛德斯微微笑了笑。</p>
     <p></p>
-    <p>“<span class="character">……そしてそれが、私の見た彼女の最後の姿だった</span>”</p>
+    <p>“<span class="character">……然后，那就是我看到的她最后的样子</span>”</p>
     <p></p>
-    <p>　何となくボケてみると、遠くから“勝手に殺さないで！”と突っ込みが入った。どうやら聞こえていたらしい。</p>
-    <p>　別れる間際まで賑やかな少女であった。</p>
+    <p>无意中装傻一看，远处传来了“不要擅自杀人！”突然进入了。好像听到了。</p>
+    <p>直到分开的时候都是热闹的少女。</p>
     <p></p>
     <p>◆</p>
     <p></p>
-    <p>　レスリーと別れ、ドミニオンとついでにピジョーンも預けたメルセデスは、その後特に何の騒動もなく国へと帰還した。</p>
-    <p>　余談だがドミニオンの離脱に、ベンケイは妙に喜んでいる。</p>
-    <p>　しかし国に戻って、それでまた平穏な学園生活に戻れるわけではない。</p>
-    <p>　国は既に戦争ムード一色で、あちこちでフォーゲラ殺すべしと市民が殺気立っている。</p>
-    <p>　当たり前だ。いきなり貴族を何人も殺されたのだ。</p>
-    <p>　これで黙って泣き寝入りなどしては吸血鬼の名折れだ。</p>
-    <p>　ハンナとジークリンデも数日間学園に戻らず、帰ってきた時は二人ともぐったりしていた。</p>
-    <p>　二人だけではない。今やダンジョン継承者となり、次期国王と目されているフェリックスもまた、明らかに疲れた様子で学園に帰って来た。</p>
-    <p>　どうやら、フォーゲラの国に攻め込むかどうかで連日議論を交わしていたのだろう。</p>
-    <p>　三人は現在、メルセデスの寮室に集まっており、メルセデス以外は暗い顔をしている。</p>
+    <p>与莱斯利分开，多米尼昂和顺便把皮乔恩也寄存起来的梅赛德斯，之后没有特别的骚动，回到了国家。</p>
+    <p>说句题外话，对于多米尼昂的离开，本凯格外高兴。</p>
+    <p>但是回到国家，并不是因此又能回到平静的学园生活。</p>
+    <p>国家已经完全是战争气氛，到处都是市民杀气腾腾的样子。</p>
+    <p>当然啦。突然杀死了好几个贵族。</p>
+    <p>这样就默默地哭着睡着了，这样有损于吸血鬼的名字。</p>
+    <p>汉娜和吉克林德也几天没回学园，回来的时候和两个人一起行动。</p>
+    <p>不只是两个人。现在成为迷宫继承人，被认为是下一任国王的菲利克斯也明显疲惫地回到了学园。</p>
+    <p>看来，连日来都在讨论是否攻入福格拉的国家吧。</p>
+    <p>三人现在都聚集在梅赛德斯的宿舍室里，除了梅赛德斯以外，脸上一片黑暗。</p>
     <p></p>
-    <p>“<span class="character">駄目だあ……完全に皆、戦争モードになってるよ……</span>”</p>
+    <p>“<span class="character">不行啊……大家完全进入了战争模式……</span>”</p>
     <p></p>
-    <p>　ぐでー、とベッドに突っ伏してハンナが諦めたような声をあげる。</p>
-    <p>　ハンナとしては今回の一件は、あまりにフォーゲラが不用意すぎて何か裏があると読んでいるのだが、その裏が全く読めない。</p>
-    <p>　確かにフォーゲラとは……というより、どの国とも水面下では探り合い、騙し合いを行っていたし、決して友好的とは言えなかったが、それでも今回のフォーゲラの動きは明らかに不用意すぎるし、間抜けすぎるのだ。</p>
-    <p>　これでは、『私達が全面的に悪いので攻め滅ぼして下さい』と言っているようなもの。</p>
-    <p>　外交でやってはいけない事の一つは、相手に大義名分を与える事だ。</p>
-    <p>　それを露骨にやってきたフォーゲラの今回の動きはどう考えてもおかしい。無能という言葉では到底済まされないだろう。</p>
-    <p>　だからもう少し慎重に調査をしてから動くべきだと主張しているのだが、ここまで皆の意見が戦争一色で染まってしまってはどうしようもない。</p>
+    <p>汉娜趴在桌上发出放弃的声音。</p>
+    <p>作为汉娜，这次的一件事，福格拉读得太不准备了，有什么内幕，但是完全看不懂。</p>
+    <p>确实所谓福格拉……与其说是这样，不如说是和哪个国家在水面下互相寻找、互相欺骗，绝对不能说是友好的，但是这次福格拉的动作明显太不准备了，也太愚蠢了。</p>
+    <p>这样的话，就像是说“我们全面不好，请消灭我们”一样。</p>
+    <p>在外交上不能做的事情之一是给对方以大义名分。</p>
+    <p>露骨地来到这里的福格拉这次的动作怎么想都很奇怪。无能这个词怎么也解决不了吧。</p>
+    <p>所以主张应该再慎重一点调查之后再行动，但是到现在为止大家的意见都染上了战争的色彩，那就没办法了。</p>
     <p></p>
-    <p>“<span class="character">フォーゲラは何と言ってるんだ？</span>”</p>
-    <p>“<span class="character">今回の件は部下の暴走で、自分達は何も関与していないと言っている</span>”</p>
+    <p>“<span class="character">福格拉方面说了什么？</span>”</p>
+    <p>“<span class="character">这次的事情是部下的暴走，我们说什么都没有参与。</span>”</p>
     <p></p>
-    <p>　メルセデスの問いに、ジークリンデは困ったように返答した。</p>
-    <p>　彼女が困るのも無理はない。</p>
-    <p>　これでは知らぬ存ぜぬを通しているだけ。余計に怒りを煽る事はあっても、事態を好転させる事は出来ない。</p>
-    <p>　それどころか、完全に逆効果だ。</p>
+    <p>对于梅赛德斯的提问，吉克林德为难地回答。</p>
+    <p>难怪她会为难。</p>
+    <p>这样的话，只是通过不知道和不知道。即使有多余的煽动愤怒的事情，也不能使事态好转。</p>
+    <p>不仅如此，效果完全相反。</p>
     <p></p>
-    <p>“だが逆に、これが貴族達の怒りを加速させてしまった。</p>
-    <p>何を知らぬ存ぜぬを通しているのか、それで騙されると思っているのか、馬鹿にするのもいい加減にしろ……とな。</p>
-    <p>私としては信じたいが……信じられる根拠が残念ながらない”</p>
+    <p>“<span class="character">但是相反，这加速了贵族们的愤怒。</span></p>
+    <p><span class="character">是通过什么不知道的不知道，还是觉得会被骗，愚弄也适可而止……这样的话。</span></p>
+    <p><span class="character">我想相信……但是能相信的根据很遗憾</span>”</p>
     <p></p>
-    <p>　これで、『知らないなら仕方ない』となる段階はとうに過ぎている。</p>
-    <p>　実際に貴族が殺されて、ジークリンデも襲撃を受け、そして捕まえた実行犯はフォーゲラだった。</p>
-    <p>　更に彼等を尋問した結果、上からの命令だった事も明らかになっている。</p>
-    <p>　正確にはあの襲撃犯達にはハンゾウという名のリーダーがおり、そのハンゾウが上からの命令を彼らに伝えていたというので直接命令を受けていたわけではない。</p>
-    <p>　とはいえ、少なくともハンゾウとやらが血迷って暴走したとかでない限りは、今回の暗殺事件はフォーゲラの国の上層部が黒幕だったと見ていいだろう。</p>
+    <p>这样，“不知道的话没办法”的阶段早就过去了。</p>
+    <p>实际上贵族被杀了，吉克林德也受到了袭击，而且抓到的执行犯是福格拉。</p>
+    <p>而且审问他们的结果，也明确了是上面的命令。</p>
+    <p>确切地说，袭击者有一个叫半藏的首领，他是从上面下达命令的，所以没有直接命令他。</p>
+    <p>但是，除非至少半藏等人失控，否则暗杀事件可以说是福格拉国家最高层的主谋。</p>
     <p></p>
-    <p>“<span class="character">あの時逃げられちゃったフォーゲラいたでしょ？　あれがハンゾウだったっていうんだけど……ミスったなあ。あの時ちゃんと捕まえてれば、もう少し詳しく分かったんだろうけど……</span>”</p>
+    <p>“<span class="character">那个时候被逃跑了的福格拉在吧？听说那是半藏……失误了。如果那个时候好好抓住的话，应该会更详细地知道的吧……</span>”</p>
     <p></p>
-    <p>　ハンゾウに逃げられてしまった以上、今回の一件が本当にフォーゲラの国の意思によるものなのか、ハンゾウ一人の暴走によるものなのかは分からない。</p>
-    <p>　だが吸血鬼、エルフェ双方共に既にフォーゲラの国が黒幕と決め打ちして動いてしまっている。</p>
+    <p>既然被半藏逃跑了，就不知道这次的一件事是真的是福格拉国家的意思还是半藏一个人的暴走。</p>
+    <p>但是吸血鬼、精灵双方都已经决定福格拉的国家是幕后黑手而行动了。</p>
     <p></p>
-    <p>“<span class="character">伯母さん……戦争になってしまうのか？</span>”</p>
-    <p>“<span class="character">うん、戦争になるね</span>”</p>
+    <p>“<span class="character">伯母……会变成战争吗</span>”</p>
+    <p>“<span class="character">嗯，要打仗了。</span>”</p>
     <p></p>
-    <p>　フェリックスの不安そうな質問に、ハンナは諦めたように言い切った。</p>
-    <p>　残念ながら、もう戦争への流れは止められない。</p>
-    <p>　現役の王女であるジークリンデと、次期国王と目されているフェリックスが反対しても同じだ。</p>
-    <p>　二人共まだ年若く、発言力はそれほど強くない。</p>
-    <p>　何より、国で最も発言力の強い男――ベルンハルトがフォーゲラ殲滅を強く唱えているのが決定打であった。</p>
+    <p>面对菲尼克斯不安的提问，汉娜断然表示放弃了。</p>
+    <p>很遗憾，战争已经无法停止。</p>
+    <p>即使现任公主吉克林德和被视为下一任国王的菲尼克斯反对也一样。</p>
+    <p>两人都还年轻，发言能力并不强。</p>
+    <p>最重要的是，国家发言能力最强的男人——伯尔恩哈特强烈主张歼灭福格拉。</p>
     <p></p>
-    <p>“残念だけどフォーゲラは滅びると思う。</p>
-    <p>ダンジョンが一つしかない上に、吸血鬼とエルフェの両方から攻撃されるんじゃ……ね。</p>
-    <p>問題はその後……フォーゲラが滅びてお終いじゃない”</p>
-    <p>“<span class="character">……そのまま残る三種族で全面戦争か</span>”</p>
+    <p>“<span class="character">虽然很遗憾，但我认为福格拉会灭亡。</span></p>
+    <p><span class="character">只有一个迷宫，而且会被吸血鬼和埃尔菲都攻击……呢。</span></p>
+    <p><span class="character">问题就在那之后……福格拉灭亡了不是结束了吗？</span>”</p>
+    <p>“<span class="character">……就这样留下的三个种族全面战争吗？</span>”</p>
     <p></p>
-    <p>　ハンナの言葉に対し、メルセデスが返した言葉にジークリンデとフェリックスがぎょっとした。</p>
-    <p>　事はもう、フォーゲラを滅ぼしてはいお終い、では済まない所まで来てしまっている。</p>
+    <p>面对汉娜的话，梅赛德斯回的话，吉克林德和费利克斯大吃一惊。</p>
+    <p>事情已经消灭了福格拉，到了不能结束的地方。</p>
     <p></p>
-    <p>“うん……今まで四種族は、それぞれが二つのダンジョンを保有する事で睨み合い、氷上の均衡を保ってきた。</p>
-    <p>その中で吸血鬼だけが三つ持ってしまったわけだけど……”</p>
+    <p>“<span class="character">嗯……到现在为止，四个种族因为各自拥有两个迷宫而互相盯着看，保持了冰上的平衡。</span></p>
+    <p><span class="character">其中只有吸血鬼拿了三个……</span>”</p>
     <p></p>
-    <p>　言いながら、フェリックスの方を見る。</p>
-    <p>　言わずもがな、吸血鬼の手に入れた『三つ目』とはフェリックスが保有している、以前はマックスが持っていたダンジョンだ。</p>
-    <p>　現在、吸血鬼は表向きにはジークリンデ、フェリックス、そして帝国のベアトリクスがダンジョンを持っている事になっている。</p>
-    <p>　……尤も、実際は帝国のダンジョンはメルセデスが保有している上に、更にメルセデスはシュタルクダンジョンに加え、今回手に入れたグレンツェダンジョンまで持っている。</p>
-    <p>　更にプラクティスダンジョンの持ち主がベルンハルトであると考えれば、実際は吸血鬼が六つ持っている事になる。</p>
+    <p>一边说，一边看菲利克斯。</p>
+    <p>不用说，吸血鬼得到的“第三个”是费利克斯拥有的，以前是麦克斯拥有的迷宫。</p>
+    <p>现在，吸血鬼表面上是吉克林德、费利克斯，还有帝国的贝阿特里克斯拥有迷宫。</p>
+    <p>……但是，实际上帝国的地下城是梅赛德斯拥有的，而且梅赛德斯除了施塔克地下城之外，还有这次得到的格伦萨地下城。</p>
+    <p>而且，如果认为实践迷宫的主人是伯恩哈特的话，实际上吸血鬼有六个。</p>
     <p></p>
-    <p>“三つになっても吸血鬼が動かなかったのは、それで調子に乗って攻め込んでも他の種族が手を組んだら逆に負けかねないから。</p>
-    <p>それに隠し持っているダンジョンがないとも言い切れない。</p>
-    <p>だから……パワーバランスは既に壊れてたんだけど、それでもまだどこも動けなかった”</p>
-    <p>“<span class="character">そのパワーバランスが今回更に壊れた、と</span>”</p>
-    <p>“うん……フォーゲラを滅ぼしてしまえば、残る吸血鬼、エルフェ、シメーレで三つ巴になる。</p>
-    <p>でさあ……うん……”</p>
+    <p>“<span class="character">即使变成三个吸血鬼也不能动，因为得意忘形地进攻，如果其他种族联手的话，反而可能会输。</span></p>
+    <p><span class="character">而且也不能断言没有隐藏的迷宫。</span></p>
+    <p><span class="character">所以……虽然力量平衡已经坏了，但是哪里都动不了</span>”</p>
+    <p>“<span class="character">那个力量平衡这次更坏了。</span>”</p>
+    <p>“<span class="character">嗯……如果消灭了福格拉，剩下的吸血鬼、艾尔菲、西梅莱就会变成三足鼎立的状态。</span></p>
+    <p><span class="character">那么……嗯……</span>”</p>
+    <p><span class="comment translator">三つ巴（みつどもえ） 三足鼎立1v1v1</span></p>
     <p></p>
-    <p>　チラ、とハンナがメルセデスを見た。</p>
-    <p>　それだけで言いたい事は伝わる。</p>
-    <p>　表向きには吸血鬼はダンジョンを三つ持っているが、ハンナ視点ではそうではない。</p>
-    <p>　彼女はメルセデスがダンジョンを持っている事……そして今回攻略したのも彼女だろうという事は既に分かっている。</p>
-    <p>　そしてプラクティスダンジョンがベルンハルトの持つダンジョンである事も当然確信している。</p>
-    <p>　つまりハンナ視点ではダンジョン六つという過剰戦力が見えてしまっているわけで、それは当然ベルンハルトも分かっている事だ。</p>
-    <p>　こんな状態でフォーゲラを滅ぼしてしまえば、残るエルフェとシメーレが手を組んでもダンジョンが四つしかない。両種族に仮に隠し持っているダンジョンがあったとしても、それでもまだ互角だ。</p>
-    <p>　つまりフォーゲラを潰した後に、エルフェとシメーレを同時に敵に回しても勝てる目算が既に出来上がっているのだ。</p>
-    <p>　ならばフォーゲラを潰しても戦争は終わらない。</p>
-    <p>　十分な勝算を得た吸血鬼は、そのままシメーレとエルフェまで平らげてしまう。</p>
-    <p>　……ただしこれは、メルセデスが手を貸せば、の話である。</p>
-    <p>　そしてベルンハルトは、その前提の上で事を進めている。</p>
+    <p>汉娜奇拉地看向了梅赛德斯。</p>
+    <p>仅此就能传达想说的话。</p>
+    <p>表面上吸血鬼有三个迷宫，但从汉娜的角度来看不是。</p>
+    <p>她已经知道梅赛德斯有迷宫……而且这次攻略的也是她吧。</p>
+    <p>而且当然也确信实践迷宫是伯恩哈特拥有的迷宫。</p>
+    <p>也就是说，从汉娜的角度来看，可以看到六个地下城的过剩战斗力，这当然是伯尔恩哈特也知道的。</p>
+    <p>如果在这种状态下消灭了福格拉，剩下的埃尔菲和西梅莱联手也只有四个迷宫。即使两个种族有暂时隐藏的迷宫，但还是势均力敌。</p>
+    <p>也就是说，在击溃福格拉之后，即使同时把埃尔菲和西梅莱转为敌人也能获胜的计划已经做好了。</p>
+    <p>如果是这样的话，即使摧毁福格拉，战争也不会结束。</p>
+    <p>得到充分胜算的吸血鬼，就这样连西梅莱和埃尔菲都吃光了。</p>
+    <p>……但是这是梅赛德斯如果帮忙的话。</p>
+    <p>而且，伯恩哈特在这个前提下进行着事情。</p>
     <p></p>
-    <p>　つまり、メルセデスの今後の動き一つで未来が左右される。</p>
-    <p>　ここが運命の分岐点なのだ。</p>
-    <p>フォーゲラ“暗殺とか知らないっす。部下が勝手に暴走してやっただけっす……いやマジのマジで”</p>
+    <p>也就是说，梅赛德斯今后的动向之一将左右未来。</p>
+    <p>这是命运的分岔点。</p>
+    <p>福格拉：“暗杀什么的不知道。只是部下擅自失控而已……不，真的是真的。”</p>
     <p></p>
     <p>　_人_人_人_人_人</p>
-    <p>_）だが　それが　(</p>
-    <p>_）逆に貴族達の　　＞</p>
-    <p>_）逆鱗に触れた！ (</p>
+    <p>_）但是 这样　(</p>
+    <p>_）触动了　　＞</p>
+    <p>_）贵族的逆鳞 (</p>
     <p>　⌒Y⌒Y⌒Y⌒Y⌒</p>
 </body>
 
