--- a/OEBPS/Text/c132.xhtml
+++ b/OEBPS/Text/c132.xhtml
@@ -11,167 +11,175 @@
 </head>
 
 <body>
-    <h1>132　道具の持ち主</h1>
-    <p>　メルセデス達からかろうじて逃れたフォーゲラは、空を飛びながら『主』の許を目指していた。</p>
-    <p>　彼の名はハンゾウ。幼い頃から隠密としての訓練を受けてきたフォーゲラで、今回の襲撃事件を起こした襲撃部隊の長である。</p>
-    <p>　彼は『主』から下された命令を忠実に実行し、彼の部下達は疑問一つ挟む事なく従ってくれた。</p>
-    <p>　道具は考えるなかれ。それが彼にも、彼の部下達にも共通して叩き込まれた思想だ。</p>
-    <p>　今回彼が受けた命令は、吸血鬼とエルフェの貴族を襲撃し、殺害する事。</p>
-    <p>　その理由は数日前に失われてしまったダンジョンを奪回する為……と部下達には教えていたが実際は違う。</p>
-    <p>　今回襲撃した貴族は決して無作為に選んだわけではない。</p>
-    <p>　エルフェの貴族からは有力で有能な貴族を選び、暗殺した。</p>
-    <p>　一部、無能も混じっていたがそちらは無作為に暗殺対象を選んでいると思わせる為のダミーだ。名は確か、グラシアンといったか。</p>
-    <p>　そして吸血鬼からは、権力にしがみ付くだけの害悪な無能を選んで抹殺した。それが『主』の命令だったからだ。</p>
-    <p>　こちらも無作為に選んでいると思わせる為のダミーとして、あえて王族であるジークリンデの許にも暗殺者が向かったが、ハンナ・バーガーによって返り討ちにされる事までが想定の上だった。</p>
-    <p>　実は彼等はジークリンデを暗殺する気などなく、適当に交戦してから撤退するつもりだったのだ。</p>
-    <p>　……しかし、差し向けた暗殺者が捕まってしまったのは、流石というべきか。</p>
-    <p></p>
-    <p>　何故こんな命令が下されたのか。その理由を語るには一月前まで遡る必要がある。</p>
-    <p></p>
-    <p>◆</p>
-    <p></p>
-    <p>“<span class="character">ハンゾウよ。お主に仕事を頼みたい。他の誰にも頼めぬ、お主だからこそ任せられる大事な仕事だ</span>”</p>
-    <p></p>
-    <p>　ハンゾウはその日、仕えている主から城に呼び出されていた。</p>
-    <p>　城と言っても、フォーゲラの城は吸血鬼達の国のそれとは明らかに趣きが異なっている。</p>
-    <p>　畳と呼ばれるこの国独自の床の上でハンゾウは跪き、主と謁見していた。</p>
-    <p>　ハンゾウが仕えているのは古くから続く由緒正しき帝みかどの一族……『帝器』と呼ばれる刀を自在に操る護国の士だ。</p>
-    <p>　吸血鬼達の国では『王剣』とも呼ばれているその刀は、ダンジョンと呼ばれる魔境を封じ込めた恐るべき力を秘めている。</p>
-    <p>　魔物を自在に使役し、道具を増やし、無尽蔵の軍団をどこでも呼び出せる。</p>
-    <p>　古の時代にダンジョンを攻略した帝の血に連なる者だけが、この刀を使う事が出来る。</p>
-    <p>　その末裔こそが今、ハンゾウの前にいる男であった。</p>
-    <p>　今代の帝……ハザマ・ヨシモト。ハンゾウの命は、彼に仕える為だけに存在している。</p>
-    <p></p>
-    <p>“<span class="character">由々しき事態だ。血を吸う悪しき鬼共の国に、帝器が集まりつつある</span>”</p>
-    <p>“<span class="character">……吸血鬼</span>”</p>
-    <p>“<span class="character">オルクスのジークリンデ・アーベントロート。ベアトリクスの女狐。加えてエルフェの長耳の馬鹿共が余計な事をした結果、フェリックス・グリューネヴァルトの手にも帝器が渡る事となった</span>”</p>
-    <p></p>
-    <p>　確定しているだけで既に三つ。吸血鬼はダンジョンを所有している事になる。</p>
-    <p>　四つの種族は今までダンジョンを二つずつ所有し、力関係が拮抗していた。</p>
-    <p>　だがここに来て吸血鬼は三つ目を手に入れてしまった。</p>
-    <p>　これは、四種族間のパワーバランスが崩壊した事を意味している。</p>
-    <p>　いつ戦争が始まってもおかしくない……いや、もう始まっている。</p>
-    <p>　表面上は停戦という形を取っている四種族だが、裏では互いを探り合い、どうにかして相手の力を削げないかと暗躍し続けている。工作員の派遣など日常茶飯事だ。</p>
-    <p>　恐らくは件の、真の王派とやらを煽ったエルフェ……バジル・サーモンもまたそんな工作員の一人だったのだろう。</p>
-    <p>　彼は吸血鬼同士を争わせようとしたが、結果的には逆に吸血鬼を強化してしまった。</p>
-    <p>　無能な働き者が張り切るとロクな事にならないという、いい例だ。</p>
-    <p></p>
-    <p>“<span class="character">帝器が三本……危険ですな</span>”</p>
-    <p>“<span class="character">いや、四本やもしれぬ</span>”</p>
-    <p></p>
-    <p>　帝は重々しい声色で、最悪の可能性を口にした。</p>
-    <p>　もし四本あれば、それはもう二つの種族を同時に敵に回せるという事だ。</p>
-    <p>　つまり吸血鬼がもし戦争を仕掛けてきた場合、残る三種族が団結しなければならないという事になる。</p>
-    <p></p>
-    <p>“ブルートという都市の近くにあるプラクティスダンジョン……奴らにとって余りに都合がよすぎるこのダンジョンは以前から、ベルンハルト・グリューネヴァルトが所有しているという噂があった。</p>
-    <p>もしも事実ならば、あまりに危険……手を打たねばならん。最早事実確認がどうこうの次元ではない……攻め込まれてからでは遅い”</p>
-    <p>“<span class="character">では、今回の私の仕事は……</span>”</p>
-    <p>“<span class="character">うむ。ハンゾウよ、お主に命じる。吸血鬼ベルンハルト・グリューネヴァルトを抹殺せよ</span>”</p>
-    <p></p>
-    <p>　この命令を受け、ハンゾウは迷いなく承諾した。</p>
-    <p>　元より断る選択肢はない。</p>
-    <p>　主が『やれ』と言えばやる。『死ね』と言えば死ぬ。</p>
-    <p>　それがフォーゲラの隠密……シノビの在り方だ。</p>
-    <p>　故にハンゾウは、ベルンハルトを仕留めるべく吸血鬼の国へと向かった。</p>
-    <p>　そして――。</p>
-    <p></p>
-    <p>　――数日後に帰ってきたハンゾウは、主であったはずの帝を病死に見せかけて毒殺した。</p>
-    <p></p>
-    <p>　これにより事態は急変した。</p>
-    <p>　帝が所有していた帝器が消え、ダンジョンへと戻ってしまったのだ。</p>
-    <p>　しかも場所は吸血鬼とエルフェの丁度国境……これは、フォーゲラにとっては最悪の事態であった。</p>
-    <p>　すぐにフォーゲラはダンジョンを攻略して手元に戻すべく隠密部隊を派遣し、その指揮をハンゾウに任せた。</p>
-    <p>　これでハンゾウが攻略すれば、以降はハンゾウを帝として崇めなければならないが、もう背に腹は代えられない。</p>
-    <p>　しかしこの判断は過ちであった。</p>
-    <p>　彼等は気付けなかったのだ……帝を殺めた張本人こそがハンゾウであると。</p>
-    <p>　そしてハンゾウは、フォーゲラ達の思惑を超えて暴走を始めた。</p>
-    <p>　ダンジョンを攻略せず、それどころか何を血迷ったのか吸血鬼とエルフェの貴族を暗殺して回り、しかもわざと証拠を残し、目撃させるという意味の分からない行動に出た。</p>
-    <p>　フォーゲラの上層部がこの異常に気付いたのは、吸血鬼とエルフェから山ほどの抗議文が送られてからの事であった。</p>
-    <p></p>
-    <p>“<span class="character">何を……あいつは、ハンゾウは一体何をしているのだっ！？</span>”</p>
-    <p></p>
-    <p>　抗議文を読んだ重鎮のうちの一人が悲鳴にも近い叫び声をあげる。</p>
-    <p>　それはフォーゲラ上層部全員の代弁でもあった。</p>
-    <p>　していない……こんな事をしろと、誰も命令していない！</p>
-    <p>　誰かに攻略されてしまったダンジョンをフリーに戻す為に、攻略者と思われる者を暗殺するまでは分かる。いや、それは本当に最後の手段だが、それでも納得は出来る。</p>
-    <p>　だが何故証拠を残す！？　何故目撃させる！？</p>
-    <p>　これでは無駄に二つの種族から睨まれるだけ。</p>
-    <p>　最悪だ、と誰もが思った。</p>
-    <p></p>
-    <p>“<span class="character">他の連中は……？　だ、誰もおかしいと思わなかったのか？　誰もハンゾウを止めなかったのか！？</span>”</p>
-    <p>“<span class="character">…………止めんだろうよ。道具は考える事なかれ……そう在れと命じ、奴らに道具である事を求めたのは我等なのだから</span>”</p>
-    <p>“<span class="character">ならば何故！　何故ハンゾウはこんな真似を！？</span>”</p>
-    <p>“<span class="character">分からぬ……</span>”</p>
-    <p></p>
-    <p>　彼等には分からない。</p>
-    <p>　何故、突然信頼していた道具ハンゾウが暴走してしまったのか。</p>
-    <p>　信じていた。頼っていた。</p>
-    <p>　故に、ハンゾウが暴走すれば他の全員が巻き添えとなる。</p>
-    <p>　その事を知ったのは、全てが手遅れになった後の事であった。</p>
-    <p></p>
-    <p>◆</p>
-    <p></p>
-    <p>　時間は戻り、現在。</p>
-    <p>　ハンゾウは片足を失った状態でありながら、無事に『主』の許へ帰還を果たしていた。</p>
-    <p>　場所はプラクティスダンジョン。</p>
-    <p>　そこに、『主』だからこそ造ることのできる隠し部屋があった。</p>
-    <p>　普段は封鎖されている場所だが、今はハンゾウが帰還した時の為に解放され、その中に『主』がいる。</p>
-    <p></p>
-    <p>“<span class="character">戻りました、主よ</span>”</p>
-    <p>“<span class="character">ご苦労</span>”</p>
-    <p></p>
-    <p>　隠し部屋の中は、まるで貴族が暮らすような豪華な一室だった。</p>
-    <p>　この部屋だけを見れば、とてもここがダンジョンの中だとは思えない。</p>
-    <p>　壁に立てかけられた鎧。槍。細かな細工が施された食器にシャンデリア。</p>
-    <p>　有名な画家に描かせた肖像画には、青い髪の少女……彼が最も目を掛けている娘が繊細に描かれている。</p>
-    <p>　そして、その部屋の奥で『主』は椅子に腰かけ、背を向けている。</p>
-    <p></p>
-    <p>“<span class="character">首尾は</span>”</p>
-    <p>“上々。仰せの通りに帝を暗殺し、ダンジョンを解放……ダンジョンは殿が予想された通りに、姫君の手に。厄介なエルフェの貴族と、今後邪魔になるだけの無能な吸血鬼の貴族……全て処分致しました。双方の怒りは完全に、フォーゲラへ向いております”
+    <h1>132. 道具的持有者</h1>
+    <p>从梅赛德斯那里好不容易逃脱的福格拉，一边在空中飞翔，一边朝着“主”的身边前进。</p>
+    <p>他叫半藏。他是从小接受隐秘训练的福格拉，是造成这次袭击的突击部队的负责人。</p>
+    <p>他忠实地执行《主》下达的命令，他的部下们毫无疑问地服从了他。</p>
+    <p>工具不要思考。这是他和他的下属产生的共同想法。</p>
+    <p>这次他接到的命令是袭击并杀害吸血鬼和艾尔菲贵族。</p>
+    <p>那个理由是为了夺回几天前丢失的迷宫……虽然告诉了部下们，但实际上不一样。</p>
+    <p>这次袭击的贵族绝不是随机挑选的。</p>
+    <p>从埃尔菲的贵族中选出了有力而有能力的贵族，并将其暗杀。</p>
+    <p>一部分，无能也混在一起，不过那边是为了让人觉得是随机选择暗杀对象的假人。名字确实叫格拉西亚吗。</p>
+    <p>然后从吸血鬼那里，选择了只会被权力束缚的有害无能来抹杀。因为那是“主”的命令。</p>
+    <p>作为让人觉得这也是随机选择的假人，暗杀者也特意前往王族吉克林德的身边，但设想到被汉娜·汉堡还击。
     </p>
-    <p>“<span class="character">これで大義名分が出来たというもの。フォーゲラ滅ぼすべしと、誰もが立ち上がるだろう</span>”</p>
+    <p>其实他们并不想暗杀吉克林德，而是打算适当交战后撤退。</p>
+    <p>……但是，派遣的暗杀者被逮捕了，应该说不愧是她吗</p>
     <p></p>
-    <p>　全ては『主』の描いた筋書き通り。</p>
-    <p>　フォーゲラの暗殺部隊がエルフェと吸血鬼の貴族を仕留める事で二つの種族の怒りをフォーゲラへ向け、戦争を仕掛けるに相応しい理由と世論を作った。</p>
-    <p>　また、この時エルフェの貴族は厄介で有能な奴を……吸血鬼の貴族は死んでいてくれた方が都合のいい無能や日和見主義者を消し去った。</p>
-    <p>　後はフォーゲラを潰すのみ。ここからフォーゲラが逆転する術などない。</p>
-    <p>　仮にシメーレと手を組んでも、向こうのダンジョン保有数は三に過ぎない。</p>
-    <p>　……まあ、シメーレは恐らく手を貸さないだろうが、あくまで仮の話だ。</p>
-    <p>　一方でこちらはジークリンデ、ベアトリクス、フェリックスの持つ王剣が一つずつ。</p>
-    <p>　メルセデスが持つダンジョンは本人が攻略した完全版で、守護者の召喚も可能だろう。</p>
-    <p>　そしてこのプラクティスダンジョン……合計『五つ』のダンジョンがある。</p>
-    <p>　この圧倒的戦力は最早、吸血鬼以外の三種族を同時に敵に回しても互角に戦えるものだ。</p>
-    <p>　そしてエルフェの怒りがフォーゲラへ向き、フォーゲラが滅びたならば……もう、吸血鬼が負ける要素はない。</p>
-    <p>　三種族の連合の目を潰した。エルフェの力も削いだ。フォーゲラも弱体化させた。</p>
-    <p>　流れは完全にこちらのものだ。</p>
-    <p>　全てが思い通りに運んだ。</p>
+    <p>为什么下达这样的命令呢。要说那个理由需要追溯到一个月前。</p>
     <p></p>
-    <p>“<span class="character">よくやった……我が道具よ</span>”</p>
+    <p>◆</p>
     <p></p>
-    <p>　キィ、と音を立てて椅子が回る。</p>
-    <p>　そしてハンゾウの方を向いたのは、このダンジョンの『主』……。</p>
-    <p>　――ベルンハルト・グリューネヴァルトであった。</p>
+    <p>“<span class="character">半藏啊。我想拜托你的工作。是不能拜托别人的，正因为是你才能交给你的重要工作。</span>”</p>
     <p></p>
-    <p>　ハンゾウは一月前、ベルンハルトを抹殺するためにブルートへと乗り込んだ。</p>
-    <p>　乗り込み……そして、敗れた。</p>
-    <p>　半死半生へ追い込まれた彼はすぐに殺される事はなく、このダンジョンに放り込まれ、コピーが産みだされ、用済みとなったオリジナルはダンジョンの養分となった。</p>
-    <p>　そのコピーこそが、このハンゾウだ。</p>
-    <p>　ダンジョンで生まれた魔物は、ダンジョンマスターに絶対服従だ。オリジナルの主など関係ない。</p>
-    <p>　故にハンゾウは何の躊躇もなく、使い手が変わった道具として忠実に、元の主である帝を抹殺したのだ。</p>
+    <p>半藏那天被他所侍奉的主召唤到城堡。</p>
+    <p>虽说是城堡，但福格拉的城堡与吸血鬼们的国家有着明显的不同。</p>
+    <p>半藏跪在日本独有的榻榻米地板上，谒见主。</p>
+    <p>半藏侍奉的是自古以来源远流长的皇帝美户一族……是自由自在地操纵被称为“帝器”的刀的护国之士。</p>
+    <p>在吸血鬼们的国家被称为“王剑”的那把刀，隐藏着封印着被称为迷宫的魔境的可怕的力量。</p>
+    <p>自在地使用魔物，增加道具，在任何地方都能召唤出无尽的军团。</p>
+    <p>只有与古代攻占迷宫的皇帝的血相连的人才能使用这把刀。</p>
+    <p>那个后裔才是现在半藏面前的男人。</p>
+    <p>当代的皇帝……哈扎玛·约西莫特。半藏的生命，只为了侍奉他而存在。</p>
     <p></p>
-    <p>“<span class="character">準備は整った。最早障害はない……いや</span>”</p>
+    <p>“<span class="character">这是严重的事态。在吸血的恶鬼们的国家里，帝器正在聚集。</span>”</p>
+    <p>“<span class="character">……吸血鬼</span>”</p>
+    <p>“<span class="character">奥尔克斯的吉克林德·阿本特罗特。贝阿特里克斯的女狐狸。再加上埃尔菲的长耳笨蛋们做了多余的事，结果菲力克斯·格林内瓦尔特的手上也得到了帝器。</span>”</p>
     <p></p>
-    <p>　ベルンハルトは静かに笑い、壁に立てかけてある肖像画へと近付く。</p>
-    <p>　最早障害はない。</p>
-    <p>　ハンナならばあるいは此度の真相に辿り着くかもしれないが、辿り着いても邪魔はすまい。</p>
-    <p>　アレもまた、国に忠誠を誓う吸血鬼だ。</p>
-    <p>　内心では今回の事をよく思わないだろうが、それでも吸血鬼の為に働くだろう。</p>
-    <p>　だが、もしかしたら障害に化けるかもしれない、そしてベルンハルトの障害足り得る者がたった一人だけこの世に存在している。</p>
+    <p>只要确定就已经有三个了。吸血鬼拥有迷宫。</p>
+    <p>四个种族至今各拥有两个地牢，力量关系对抗。</p>
+    <p>但是来到这里吸血鬼得到了第三个。</p>
+    <p>这意味着四个种族之间的力量平衡已经崩溃。</p>
+    <p>战争什么时候开始都不奇怪……不，已经开始了。</p>
+    <p>表面上是采取停战形式的四个种族，但在背后互相试探，一直在暗地里暗地里想着能不能设法削弱对方的力量。派遣工作人员是家常便饭。</p>
+    <p>恐怕这件事是煽动真正的王派的艾尔菲……罗勒三文鱼也是这样的工作人员之一吧。</p>
+    <p>他想让吸血鬼互相争斗，结果反而强化了吸血鬼。</p>
+    <p>这是一个很好的例子，无能的劳动者一旦干劲十足就不会变成好事。</p>
     <p></p>
-    <p>“<span class="character">お前は私の敵となるか。それとも共に覇道を往くか……なあ、メルセデスよ</span>”</p>
+    <p>“<span class="character">帝器三个……好危险啊</span>”</p>
+    <p>“<span class="character">不，可能是四根吧。</span>”</p>
     <p></p>
-    <p>　肖像画に描かれた娘の頬を撫で、ベルンハルトは何処か期待しているように笑った。</p>
-    <p>ハンゾウ（肖像画をわざわざ飾るとか、こいつ、娘の事大好きやん……）</p>
+    <p>皇帝用庄重的声色说出了最坏的可能性。</p>
+    <p>如果有四条，那就是可以同时与两个种族为敌。</p>
+    <p>也就是说，如果吸血鬼发动战争，剩下的三个种族必须团结起来。</p>
+    <p></p>
+    <p>“<span class="character">布鲁特这座城市附近的普拉斯迷宫……对他们来说太方便了，这个迷宫从以前开始就有传言说是伯恩哈特·格林内瓦尔特所有的。</span></p>
+    <p><span class="character">如果是事实的话，太危险了……必须采取措施。最早确认事实并不是怎样的次元……被攻入之后就晚了</span>”</p>
+    <p>“<span class="character">那么，这次我的工作是……</span>”</p>
+    <p>“<span class="character">嗯。半藏啊，命令你的主。把吸血鬼伯恩哈特·格林内瓦尔特抹杀。</span>”</p>
+    <p></p>
+    <p>接到这个命令，半藏毫不犹豫地答应了。</p>
+    <p>原来就没有拒绝的选择。</p>
+    <p>主说“做”就做。说“去死吧”就会死。</p>
+    <p>这就是福格拉的隐秘……西诺比的存在方式。</p>
+    <p><span class="comment translator">シノビ 似乎是个假面骑士里的角色</span></p>
+    <p>因此，半藏前往吸血鬼之国，要将伯恩哈特消灭。</p>
+    <p>然后——。</p>
+    <p></p>
+    <p>——几天后回来的半藏，毒害了地本应是主的天皇且伪装成病死。</p>
+    <p></p>
+    <p>由此事态发生了急剧变化。</p>
+    <p>帝所拥有的帝器消失了，变回了迷宫。</p>
+    <p>而且地点正好是吸血鬼和埃尔菲的国境……这对福格拉来说是最坏的事态。</p>
+    <p>很快，福格拉为了攻占迷宫回到身边，派遣了隐密部队，将其指挥交给了半藏。</p>
+    <p>如果半藏攻略成功，之后必须将他奉为天皇。这也是无可奈何的事。</p>
+    <p><span class="comment translator">もう背に腹は代えられない</span></p>
+    <p><span class="comment translator">指事态紧急，长痛不如短痛。</span></p>
+    <p><span class="comment translator">来源还是传统日本的武士世界。对拿刀的他们来说，腹部是重要的脏器所在、而背部主要都是骨头这种硬物。所以比起腹部受伤还是背部来抗好。</span></p>
+    <p><span class="comment translator">https://kotobaimi.jp/seniharaha/</span></p>
+    <p>但是这个判断是错误的。</p>
+    <p>他们没有意识到，半藏才是杀死皇帝的人。</p>
+    <p>并且半藏，超过四格拉们的所想开始了暴走。</p>
+    <p>他没有攻占迷宫，反而暗杀了吸血鬼和艾尔菲的贵族，并故意留下证据，让他们目击。</p>
+    <p>福格拉的上层注意到这个异常是在吸血鬼和埃尔菲送来了一大堆抗议文之后的事。</p>
+    <p></p>
+    <p>“<span class="character">什么……那家伙，半藏到底在干什么！？</span>”</p>
+    <p></p>
+    <p>读了抗议书的重要人物中有一人发出近乎悲鸣的叫声。</p>
+    <p>那也是福格拉上层全体人员的代言。</p>
+    <p>没有人命令你做这种事！</p>
+    <p>为了让被谁攻占的迷宫回到自由，暗杀被认为是攻击者的人之前就知道了。不，那真的是最后的手段，但还是可以理解的。</p>
+    <p>但是为什么要留下证据！？为什么让我目击！？</p>
+    <p>这样的话，只会被两个种族盯上。</p>
+    <p>谁都觉得最糟糕了。</p>
+    <p></p>
+    <p>“<span class="character">其他人……？谁也不觉得奇怪吗？谁也没阻止半藏吗！？</span>”</p>
+    <p>“<span class="character">…………不会停止的吧。工具不需要思考......因为是我们命令它们成为工具并要求它们成为工具。</span>”</p>
+    <p>“<span class="character">那么为什么！为什么半藏要这样</span>”</p>
+    <p>“<span class="character">不明白……</span>”</p>
+    <p></p>
+    <p>他们不明白。</p>
+    <p>为何，突然信赖的工具半藏暴走了。</p>
+    <p>一直相信着。依靠着。</p>
+    <p>因此，如果半藏暴走的话，其他所有人都会被卷入其中。</p>
+    <p>知道那件事是在一切都晚了之后的事。</p>
+    <p></p>
+    <p>◆</p>
+    <p></p>
+    <p>时间回来了，现在。</p>
+    <p>半藏虽然失去了一只脚，但平安地回到了《主》那里。</p>
+    <p>地点是实践迷宫。</p>
+    <p>在那里，正因为是“主”，所以有可以建造的隐藏房间。</p>
+    <p>平时是被封锁的地方，现在为了半藏返回的时候被解放，其中有“主”。</p>
+    <p></p>
+    <p>“<span class="character">我回来了，主啊</span>”</p>
+    <p>“<span class="character">辛苦了</span>”</p>
+    <p></p>
+    <p>隐藏的房间里，简直就像贵族生活一样豪华的一间房间。</p>
+    <p>单看这个房间，没法不觉得它不是在迷宫里。</p>
+    <p>靠墙的铠甲。枪。精细工艺的餐具上有枝形吊灯。</p>
+    <p>让著名画家画的肖像画中，蓝头发的少女……他最引人注目的女儿被细腻地描绘出来。</p>
+    <p>然后，在那个房间的深处，“主”坐在椅子上，背对着。</p>
+    <p></p>
+    <p>“<span class="character">成果如何</span>”</p>
+    <p><span class="comment translator">首尾は 完整的是【首尾は上々】也就是底下半藏跟着的。带上了JOJO就是顺风顺水的意思了</span></p>
+    <p>“<span
+            class="character">完美。如您所说，暗杀皇帝，解放迷宫……迷宫正如您所预想的那样，在公主的手中。麻烦的艾尔菲贵族和今后只会成为绊脚石的无能吸血鬼贵族……全部处理完毕。双方的愤怒完全面向福格拉。</span>”
+    </p>
+    <p>“<span class="character">这样就有了大义名分。谁都会站起来消灭福格拉吧。</span>”</p>
+    <p></p>
+    <p>全部按照《主》所描绘的情节。</p>
+    <p>福格拉的暗杀部队杀死了埃尔菲和吸血鬼贵族，将两个种族的愤怒转向了福格拉，制造了适合发动战争的理由和舆论。</p>
+    <p>另外，此时艾尔菲的贵族把麻烦又能干的家伙……吸血鬼贵族死了比较方便的无能和机会主义者消灭了。</p>
+    <p>之后只会击溃四格拉。从这里开始没有四格拉逆转的方法。</p>
+    <p>即使和西梅莱联手，对面的迷宫拥有数也只有三。</p>
+    <p>……嗯，西梅莱恐怕不会帮忙，但毕竟是假话。</p>
+    <p>另一方面，这是吉克林德、贝阿特利克斯、费利克斯的王剑各一把。</p>
+    <p>梅赛德斯拥有的迷宫是本人攻略的完整版，守护者的召唤也是可能的吧。</p>
+    <p>还有这个实践迷宫……合计有“五个”迷宫。</p>
+    <p>这种压倒性的战斗力，即使同时与吸血鬼以外的三个种族为敌也能势均力敌。</p>
+    <p>然后艾尔菲的愤怒转向了福格拉，如果福格拉灭亡了的话……已经没有吸血鬼输的要素了。</p>
+    <p>摧毁了三个种族联合的眼睛。埃尔菲的力量也被削减了。福格拉也被削弱了。</p>
+    <p>流程完全在这里。</p>
+    <p>一切都如愿以偿。</p>
+    <p></p>
+    <p>“<span class="character">干得好……我的道具啊</span>”</p>
+    <p></p>
+    <p>椅子发出吱吱的声音转动。</p>
+    <p>然后面向半藏的是这个迷宫的《主》……。</p>
+    <p>——伯恩哈特·格林内瓦尔特。</p>
+    <p></p>
+    <p>半藏在一个月前，为了抹杀伯恩哈特，登上了布鲁特。</p>
+    <p>上车……然后，输了。</p>
+    <p>被逼到半死半生的他并没有马上被杀，而是被扔进了这个迷宫，制造了复制体，用完的原版成为了迷宫的养分。</p>
+    <p>那个复制体就是这个半藏。</p>
+    <p>在迷宫中诞生的魔物绝对服从于迷宫主人。和原来的主人没有关系。</p>
+    <p>因此，半藏毫不犹豫，作为使用者改变的工具忠实地抹杀了原来的主帝。</p>
+    <p></p>
+    <p>“<span class="character">准备好了，已经没有障碍了……不。</span>”</p>
+    <p></p>
+    <p>伯恩哈特静静地笑着，靠近靠在墙上的肖像画。</p>
+    <p>最早没有障碍。</p>
+    <p>如果是汉娜的话，也许能到达这次的真相，但即使到达了也不会妨碍。</p>
+    <p>那个也是发誓效忠国家的吸血鬼。</p>
+    <p>虽然内心不太想这次的事情，但还是会为了吸血鬼而工作吧。</p>
+    <p>但是，也许会变成障碍，而且伯恩哈特的障碍不足者只有一人存在于这个世界上。</p>
+    <p></p>
+    <p>“<span class="character">你会成为我的敌人吗？还是一起走向霸道呢……呐，梅赛德斯啊。</span>”</p>
+    <p></p>
+    <p>抚摸着画在肖像画上的女儿的脸颊，伯恩哈特露出了期待的笑容。</p>
+    <p>半藏（特意装饰肖像画，这家伙很喜欢女儿啊……）</p>
 </body>
 
 </html>
